Fixes "apply to checkout" discount button on mobile in homepage secret ingredient ticket

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -51,6 +51,11 @@
   .infinite-slider {
     animation: 20s infiniteSlider infinite linear;
   }
+  @media (min-width: 1024px) {
+    .lg\:self-end {
+      align-self: flex-end;
+    }
+  }
 }
 
 @layer utilities {
